--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_secure_storage: ^6.0.0
+  augmented_reality_plugin_wikitude:
+    path: ./plugin/augmented_reality_plugin_wikitude/
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +66,12 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - samples/
+    - samples/03_MultipleTargets_1_MultipleTargets/
+    - samples/03_MultipleTargets_1_MultipleTargets/js/
+    - samples/03_MultipleTargets_1_MultipleTargets/css/
+    - samples/03_MultipleTargets_1_MultipleTargets/assets/
+    - samples/03_MultipleTargets_1_MultipleTargets/assets/models/
    
 
   # An image asset can refer to one or more resolution-specific "variants", see
