--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,10 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - wikitude_object_tracking/
+    - wikitude_object_tracking/js/
+    - wikitude_object_tracking/css/
+    - wikitude_object_tracking/assets/
     - samples/
     - samples/03_MultipleTargets_1_MultipleTargets/
     - samples/03_MultipleTargets_1_MultipleTargets/js/
