--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  
+  # Flutter secure storage package om de ingevulde gebruikersnaam in de localstorage te kunnen opslaan om nadien
+  # overal in de app te kunnen gebruiken
   flutter_secure_storage: ^6.0.0
+
+  # plugin om met wikitide te kunnen werken
   augmented_reality_plugin_wikitude:
     path: ./plugin/augmented_reality_plugin_wikitude/
 
