--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   http: ^0.13.3
+  flutter_launcher_icons: "^0.10.0"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -103,3 +104,20 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/logo.png"
+  # min_sdk_android: 23 # android min sdk min:16, default 21
+  # web:
+  #   generate: true
+  #   image_path: "assets/audi.png"
+  #   background_color: "#FFFFFF"
+  #   theme_color: "#FFFFFF"
+  # windows:
+  #   generate: true
+  #   image_path: "assets/audi.png"
+  #   icon_size: 48 # min:48, max:256, default: 48
+  # macos:
+  #   generate: true
+  #   image_path: "assets/audi.png"
